--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <div class="container container-center">
             <h2>Projects</h2>
             <p style="font-weight: 400px;">I like to showcase my work and here are some of my projects which I have hosted online.</p>
-            <a class="link primary-link" href="">View projects</a></div>
+            <a class="link primary-link" href="projects.html">View projects</a></div>
     </section>
 
     <section class="ow section">
         <div class="container container-center">
             <h2>Blogs</h2>
         <p style="font-weight: 400px;">I am also working on a some technical and non technincal blogs. I like to document my journey of learning.</p>
-        <a class="link primary-link" href="">Read Blogs</a>
+        <a class="link primary-link" href="blogs.html">Read Blogs</a>
         </div>
     </section>
 
