--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <footer class="footer">
         <div class="footer-header">Socials</div>
         <ul class="list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="">LinkedIn</a></li>
-            <li class="list-item-inline"><a class="link" href="">Twiitter</a></li>
-            <li class="list-item-inline"><a class="link" href="">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/aryan-marthak-500901268?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BN1%2FY1hrDRh6n9Uho6mVzDQ%3D%3D">LinkedIn</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/aryan_marthak">Twiitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://github.com/aryan-marthak">Github</a></li>
         </ul>
     </footer>
 
