--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,14 @@
         </ul>
     </nav>
 
+    <header class="hero">
+        
+        <img class="hero-image" src="/img/undraw_project_completed_re_jr7u.svg" >
+        <h1 class="hero-heading">Hello World, myself <span class="heading-inverted">Aryan Marthak</span></h1>
+        <p class="hero-projects">These are the projects I have worked on till now.</p>
+        
+    </header>
+
     <ol reversed class="container-center">
         <li>
         <h2>Superhero quiz</h2>
